# ponder

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .hgignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.txt  Config.cmake  INSTALL.txt  LICENSE.GPL3  LICENSE.GPL3.txt  README.md  README.txt  _config.yml  about.md  annotated.html  annotated_dup.js  blog_ponder_1.html  blog_ponder_2.html  blog_ponder_3.html  building_ponder.html  camp.pro  class_array_mapper.html  classes.html  classget_8hpp.html  classget_8hpp.js  classponder_1_1_args-members.html  classponder_1_1_args.html  classponder_1_1_args.js  classponder_1_1_array_property-members.html  classponder_1_1_array_property.html  classponder_1_1_array_property.js  classponder_1_1_bad_argument-members.html  classponder_1_1_bad_argument.html  classponder_1_1_bad_argument.js  classponder_1_1_bad_type-members.html  classponder_1_1_bad_type.html  (+301 more)
_includes/: footer.html  head.html  header.html  sidebar.html
_layouts/: default.html  post.html
_posts/: 2016-01-01-welcome-to-jekyll.markdown  2016-01-01-welcome-to-ponder.markdown  2016-01-06-docs.md  2016-03-07-Choices-pondered.md  2016-03-10-Unit-tests-now-use-Catch.md  2016-05-16-Ponder-1.1.md  2016-07-01-Ponder-1.2.md  2016-07-06-Ponder-1.3.md  2016-09-18-Ponder-2.0.md  2016-10-12-Ponder-2.1.md
_sass/: _base.scss  _syntax-highlighting.scss
_site/: feed.xml  index.html
blog/: index.html
ci/: build.sh  lua_local.sh
cmake/: CAMPConfig.cmake.in  Config.cmake  GitTag.cmake  MacOSX.cmake  PackageFilename.cmake  Packaging.cmake  PonderConfig.cmake.in  camp.pc.in  ponder.pc.in  version.in
css/: _mixins.scss  _syntax.scss  _vars.scss  main.scss  style-mobile.scss  style-mobilep.scss  style-narrow.scss  style-narrower.scss  style-normal.scss  style-wide.scss  style.scss
doc/: CMakeLists.txt  doxygen_cheatsheet.txt  mkdocs.sh  updocs.sh  uplocaldocs.sh
doc/api/: Doxyfile  Doxyfile.in  customdoxygen.css  docinsert.py  dox_style.css  doxy-boot.js  footer.html  footer.php  header.html  header.php  mainpage.hpp  tutorial.hpp
doc/api/pages/: building.hpp  eg_shapes.hpp  license.hpp  mainpage.hpp
doc/api/pages/blog/: 20160101-welcome-to-ponder.hpp  20160516-Ponder-1.hpp  20160918-Ponder-2.hpp  20180908-Ponder-3.hpp
doc/images/: logo_camp.ai
doc/property_editor/requirements_specification/: property_editor_rs0007.tex
doc/property_editor/requirements_specification/images/: array_display.ui
doc/property_editor/requirements_specification/prototype/: declaration.hpp  delegate.cpp  delegate.hpp  main.cpp  propertyeditor.cpp  propertyeditor.hpp  propertyeditor.pro  propertynode.cpp  propertynode.hpp  treemodel.cpp  treemodel.hpp  visitor.cpp  visitor.hpp
doc/requirements_specification/: camp_rs0001.tex
doc/requirements_specification/images/src/: overview.vsd  properties.vsd
doc/technical_specification/: camp_ts0001.tex
doc/technical_specification/images/src/: class.vsd  constructor.vsd  enum.vsd  enumuserobject.vsd  exceptions.vsd  function.vsd  observer.vsd  property.vsd  typeid.vsd  value.vsd  visitor.vsd
docs/: annotated.html  annotated_dup.js  class_array_mapper.html  classes.html  classponder_1_1_args-members.html  classponder_1_1_args.html  classponder_1_1_args.js  classponder_1_1_array_property-members.html  classponder_1_1_array_property.html  classponder_1_1_array_property.js  classponder_1_1_bad_argument-members.html  classponder_1_1_bad_argument.html  classponder_1_1_bad_argument.js  classponder_1_1_bad_type-members.html  classponder_1_1_bad_type.html  classponder_1_1_bad_type.js  classponder_1_1_class-members.html  classponder_1_1_class.html  classponder_1_1_class.js  classponder_1_1_class_already_created-members.html  classponder_1_1_class_already_created.html  classponder_1_1_class_already_created.js  classponder_1_1_class_builder-members.html  classponder_1_1_class_builder.html  classponder_1_1_class_builder.js  classponder_1_1_class_not_found-members.html  classponder_1_1_class_not_found.html  classponder_1_1_class_not_found.js  classponder_1_1_class_unrelated-members.html  classponder_1_1_class_unrelated.html  classponder_1_1_class_unrelated.js  classponder_1_1_class_visitor-members.html  classponder_1_1_class_visitor.html  classponder_1_1_class_visitor.js  classponder_1_1_constructor-members.html  classponder_1_1_constructor.html  classponder_1_1_constructor.js  classponder_1_1_enum-members.html  classponder_1_1_enum.html  classponder_1_1_enum.js  (+293 more)
include/: version.hpp
js/: init.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  (+90 more)
test/: CMakeLists.txt  arrayproperty.cpp  arrayproperty.hpp  catch.hpp  class.cpp  class.hpp  classvisitor.cpp  classvisitor.hpp  constructor.cpp  constructor.hpp  create.cpp  dictionary.cpp  enum.cpp  enum.hpp  enumclass.cpp  enumclassobject.cpp  enumclassproperty.cpp  enumobject.cpp  enumobject.hpp  enumproperty.cpp  enumproperty.hpp  example_mainpage.cpp  function.cpp  function.hpp  functionaccess.cpp  functionaccess.hpp  inheritance.cpp  inheritance.hpp  main.cpp  mapper.cpp  mapper.hpp  observer.cpp  observer.hpp  property.cpp  property.hpp  propertyaccess.cpp  propertyaccess.hpp  string_view.cpp  tagholder.cpp  tagholder.hpp  (+10 more)
test/examples/: CMakeLists.txt  declare.cpp  inspect.cpp  main.cpp  serialise.cpp  shapes.cpp  simple.cpp  test.hpp  userdata.cpp
test/lua/: CMakeLists.txt  main.cpp
test/ponder/: CMakeLists.txt  arrayproperty.cpp  class.cpp  classvisitor.cpp  constructor.cpp  dictionary.cpp  enum.cpp  enumclass.cpp  enumclassobject.cpp  enumclassproperty.cpp  enumobject.cpp  enumproperty.cpp  example_mainpage.cpp  function.cpp  functionaccess.cpp  inheritance.cpp  main.cpp  mapper.cpp  property.cpp  propertyaccess.cpp  serialise.cpp  string_view.cpp  tagholder.cpp  test.hpp  traits.cpp  userdata.cpp  userobject.cpp  userproperty.cpp  value.cpp
test/qt/: CMakeLists.txt  functionmapping.cpp  functionmapping.hpp  main.cpp  propertymapping.cpp  propertymapping.hpp  qstringmapping.cpp  test.hpp
uses/script/lua/: CMakeLists.txt  main.cpp
(+394 files in other folders)
